2008-07-14  Matthew Grooms
	* src/racoon/isakmp_cfg.c : fix hybrid enabled builds

2008-07-14  Matthew Grooms
	* src/racoon/crypto_openssl.c
	  src/racoon/eaytest.c
	  src/racoon/misc.c
	  src/racoon/misc.h
	  src/racoon/racoonctl.c : fix conflict with freebsd8 hexdump()

2008-07-11  Timo Teras  <timo.teras@iki.fi>
	Track:259, original patch from Atis Elsts <the.kfx@gmail.com>:
	* src/racoon/isakmp.c, src/racoon/isakmp_inf.c: fix double memfree
	  by changing copy_ph1addresses() to not free ph1 on failure
	  and remove misplaced remph1() calls causing memory corruption

2008-07-09  Timo Teras  <timo.teras@iki.fi>
	Track:269, from Chong Peng <chongpeng@gmail.com>:
	* src/racoon/cfparse.y: remove parser initialization causing
	  fd leak from cfreparse() since cfparse() initializes it anyway

2008-07-02  Yvan Vanhullebus  <vanhu@netasq.com>
	Track:266, from Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: fixed some %d to %zu (size_t values)

2008-06-18  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/grabmyaddr.c
	  src/racoon/ipsec_doi.c
	  src/racoon/isakmp.c
	  src/racoon/isakmp_cfg.c
	  src/racoon/isakmp_inf.c
	  src/racoon/remoteconf.c
	  src/racoon/admin.c : network port value manipulation cleanup

2008-04-25  Yvan Vanhullebus  <vanhu@netasq.com>
	Track:4, from Timo Teras:
	* src/racoon/isakmp_inf.c: extract ports information from
	SADB_X_EXT_NAT_T_[SD]PORT if present in purge_ipsec_spi()

2008-03-06  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/oakley.c: Generates a log if cert validation has been
	  disabled by configuration.

2008-03-05  Matthew Grooms
	* src/racoon/cfparse.y: properly initialize the unity network struct

2008-03-05  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/pfkey.c: better handling for pfkey socket read errors

2008-02-25  Emmanuel Dreyfus <manu@netbsd.org>
        From Brian Haley <brian.haley@hp.com>
	* src/racoon/ipsec_doi.c: Do check SPI size (it was not due to a typo)
